@@ -39,6 +39,8 @@ class BaseItem(object):
         self._replace_context_menu = False
         self._date = None
 
+        self._next_page = False
+
     def __str__(self):
         name = self._name
         uri = self._uri
@@ -111,3 +113,11 @@ class BaseItem(object):
 
     def get_date(self):
         return self._date
+
+    @property
+    def next_page(self):
+        return self._next_page
+
+    @next_page.setter
+    def next_page(self, value):
+        self._next_page = bool(value)
