@@ -1,4 +1,5 @@
 6.8.4
+[fix] next page now ignores sorting, remains at the end of the directory
 [fix] searching, no longer require remote safe search
 [fix] notifications for some languages
 [chg] only log http server ping failures
